tests/baselines/reference/parserForOfStatement3.errors.txt
parserForOfStatement3.ts(1,13): error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
parserForOfStatement3.ts(1,18): error TS2304: Cannot find name 'X'.


==== parserForOfStatement3.ts (2 errors) ====
    for (var a, b of X) {
                ~
!!! error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
                     ~
!!! error TS2304: Cannot find name 'X'.
    }